--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQMoreQuestionView.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQMoreQuestionView.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="2vN-UH-khS" customClass="YQMoreQuestionView" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="265"/>
+            <rect key="frame" x="0.0" y="0.0" width="470" height="67"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y7r-p7-11P">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="66.5"/>
+                    <rect key="frame" x="0.0" y="0.0" width="470" height="67"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DNz-qt-uDi">
-                            <rect key="frame" x="10" y="22" width="22" height="22"/>
+                            <rect key="frame" x="10" y="22.5" width="22" height="22"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="22" id="ERa-ri-9iF"/>
                                 <constraint firstAttribute="height" constant="22" id="oLq-pJ-r7A"/>
@@ -28,13 +28,13 @@
                             <state key="selected" image="圆角矩形-select"/>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A. 物业建设单位或社区委" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBX-Ns-79h">
-                            <rect key="frame" x="42" y="24" width="428" height="18"/>
+                            <rect key="frame" x="42" y="24.5" width="418" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bgT-tc-dhY">
-                            <rect key="frame" x="0.0" y="0.0" width="150" height="66.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="150" height="67"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="150" id="dNW-k7-Ubs"/>
                             </constraints>
@@ -54,155 +54,20 @@
                         <constraint firstItem="bgT-tc-dhY" firstAttribute="top" secondItem="Y7r-p7-11P" secondAttribute="top" id="UXy-Ju-rks"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lbX-eD-6iM">
-                    <rect key="frame" x="0.0" y="66.5" width="480" height="66"/>
-                    <subviews>
-                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q7h-Jy-GcN">
-                            <rect key="frame" x="10" y="22" width="22" height="22"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="22" id="Dh4-ym-sPY"/>
-                                <constraint firstAttribute="height" constant="22" id="T50-Ab-M0W"/>
-                            </constraints>
-                            <state key="normal" image="圆角矩形"/>
-                            <state key="selected" image="圆角矩形-select"/>
-                        </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B. 物业建设单位或社区委" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YFS-hg-6UT">
-                            <rect key="frame" x="42" y="24" width="428" height="18"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oqF-ut-M6S">
-                            <rect key="frame" x="0.0" y="0.0" width="150" height="66"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="150" id="Zkt-8a-A8A"/>
-                            </constraints>
-                            <connections>
-                                <action selector="more2ButtonClick:" destination="2vN-UH-khS" eventType="touchUpInside" id="Sgl-PX-tVK"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="Q7h-Jy-GcN" firstAttribute="centerY" secondItem="lbX-eD-6iM" secondAttribute="centerY" id="1Sv-dP-Sjs"/>
-                        <constraint firstItem="oqF-ut-M6S" firstAttribute="leading" secondItem="lbX-eD-6iM" secondAttribute="leading" id="2iC-ca-2v2"/>
-                        <constraint firstItem="oqF-ut-M6S" firstAttribute="top" secondItem="lbX-eD-6iM" secondAttribute="top" id="6q3-0m-aj8"/>
-                        <constraint firstItem="YFS-hg-6UT" firstAttribute="centerY" secondItem="lbX-eD-6iM" secondAttribute="centerY" id="Dqr-wi-EK1"/>
-                        <constraint firstItem="Q7h-Jy-GcN" firstAttribute="leading" secondItem="lbX-eD-6iM" secondAttribute="leading" constant="10" id="SuG-UX-WlH"/>
-                        <constraint firstAttribute="trailing" secondItem="YFS-hg-6UT" secondAttribute="trailing" constant="10" id="TeP-Sc-tww"/>
-                        <constraint firstItem="YFS-hg-6UT" firstAttribute="leading" secondItem="Q7h-Jy-GcN" secondAttribute="trailing" constant="10" id="XSW-Ir-PD7"/>
-                        <constraint firstAttribute="bottom" secondItem="oqF-ut-M6S" secondAttribute="bottom" id="rQJ-kc-ylS"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mdl-fM-Aof">
-                    <rect key="frame" x="0.0" y="132.5" width="480" height="66.5"/>
-                    <subviews>
-                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sOK-Zw-TFn">
-                            <rect key="frame" x="10" y="22.5" width="22" height="22"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="22" id="2jG-gO-iIx"/>
-                                <constraint firstAttribute="height" constant="22" id="Vv6-sh-BD1"/>
-                            </constraints>
-                            <state key="normal" image="圆角矩形"/>
-                            <state key="selected" image="圆角矩形-select"/>
-                        </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="C. 物业建设单位或社区委" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0fp-wL-TGx">
-                            <rect key="frame" x="42" y="24" width="428" height="18"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DJm-JZ-do8">
-                            <rect key="frame" x="0.0" y="0.0" width="150" height="66.5"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="150" id="uHU-83-4hX"/>
-                            </constraints>
-                            <connections>
-                                <action selector="more3ButtonClick:" destination="2vN-UH-khS" eventType="touchUpInside" id="Kic-bA-8BX"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="DJm-JZ-do8" firstAttribute="leading" secondItem="mdl-fM-Aof" secondAttribute="leading" id="1zY-TN-Tmw"/>
-                        <constraint firstItem="0fp-wL-TGx" firstAttribute="leading" secondItem="sOK-Zw-TFn" secondAttribute="trailing" constant="10" id="IOy-Fy-qVQ"/>
-                        <constraint firstItem="sOK-Zw-TFn" firstAttribute="centerY" secondItem="mdl-fM-Aof" secondAttribute="centerY" id="PsI-MG-q4N"/>
-                        <constraint firstAttribute="trailing" secondItem="0fp-wL-TGx" secondAttribute="trailing" constant="10" id="SM6-7r-Hzg"/>
-                        <constraint firstItem="sOK-Zw-TFn" firstAttribute="leading" secondItem="mdl-fM-Aof" secondAttribute="leading" constant="10" id="VFn-AK-ohI"/>
-                        <constraint firstItem="0fp-wL-TGx" firstAttribute="centerY" secondItem="mdl-fM-Aof" secondAttribute="centerY" id="ZYG-ef-in2"/>
-                        <constraint firstAttribute="bottom" secondItem="DJm-JZ-do8" secondAttribute="bottom" id="aAc-pT-fMZ"/>
-                        <constraint firstItem="DJm-JZ-do8" firstAttribute="top" secondItem="mdl-fM-Aof" secondAttribute="top" id="gyD-Ln-1fF"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ypn-K7-f8Y">
-                    <rect key="frame" x="0.0" y="199" width="480" height="66"/>
-                    <subviews>
-                        <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sYa-d7-LDW">
-                            <rect key="frame" x="10" y="22" width="22" height="22"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="22" id="DXU-Kp-XpV"/>
-                                <constraint firstAttribute="height" constant="22" id="jec-sP-0He"/>
-                            </constraints>
-                            <state key="normal" image="圆角矩形"/>
-                            <state key="selected" image="圆角矩形-select"/>
-                        </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="D. 物业建设单位或社区委" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1o-ci-Oga">
-                            <rect key="frame" x="42" y="24" width="428" height="18"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0vz-dy-OZB">
-                            <rect key="frame" x="0.0" y="0.0" width="150" height="66"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="150" id="859-v4-ySh"/>
-                            </constraints>
-                            <connections>
-                                <action selector="more4ButtonClick:" destination="2vN-UH-khS" eventType="touchUpInside" id="O7e-Jq-n0y"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                    <constraints>
-                        <constraint firstAttribute="bottom" secondItem="0vz-dy-OZB" secondAttribute="bottom" id="9ZS-aK-o4e"/>
-                        <constraint firstItem="0vz-dy-OZB" firstAttribute="top" secondItem="Ypn-K7-f8Y" secondAttribute="top" id="KQf-8e-CsY"/>
-                        <constraint firstItem="sYa-d7-LDW" firstAttribute="leading" secondItem="Ypn-K7-f8Y" secondAttribute="leading" constant="10" id="SH4-JF-1dX"/>
-                        <constraint firstAttribute="trailing" secondItem="U1o-ci-Oga" secondAttribute="trailing" constant="10" id="WYH-c6-df3"/>
-                        <constraint firstItem="U1o-ci-Oga" firstAttribute="centerY" secondItem="Ypn-K7-f8Y" secondAttribute="centerY" id="mqY-Gb-7Hl"/>
-                        <constraint firstItem="U1o-ci-Oga" firstAttribute="leading" secondItem="sYa-d7-LDW" secondAttribute="trailing" constant="10" id="o09-9e-IGC"/>
-                        <constraint firstItem="0vz-dy-OZB" firstAttribute="leading" secondItem="Ypn-K7-f8Y" secondAttribute="leading" id="o1p-yX-a5S"/>
-                        <constraint firstItem="sYa-d7-LDW" firstAttribute="centerY" secondItem="Ypn-K7-f8Y" secondAttribute="centerY" id="y10-ct-xJH"/>
-                    </constraints>
-                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="Ypn-K7-f8Y" firstAttribute="leading" secondItem="2vN-UH-khS" secondAttribute="leading" id="1zd-nU-RgL"/>
-                <constraint firstAttribute="trailing" secondItem="Ypn-K7-f8Y" secondAttribute="trailing" id="3Ny-bB-QTI"/>
-                <constraint firstItem="mdl-fM-Aof" firstAttribute="height" secondItem="Y7r-p7-11P" secondAttribute="height" id="5Hw-0F-j4F"/>
-                <constraint firstItem="lbX-eD-6iM" firstAttribute="height" secondItem="Y7r-p7-11P" secondAttribute="height" id="8hn-Id-fQI"/>
-                <constraint firstItem="Ypn-K7-f8Y" firstAttribute="height" secondItem="Y7r-p7-11P" secondAttribute="height" id="GvE-jv-3Jn"/>
-                <constraint firstItem="mdl-fM-Aof" firstAttribute="top" secondItem="lbX-eD-6iM" secondAttribute="bottom" id="H9l-z0-JIa"/>
                 <constraint firstItem="Y7r-p7-11P" firstAttribute="top" secondItem="2vN-UH-khS" secondAttribute="top" id="Ivu-m5-JgK"/>
-                <constraint firstItem="lbX-eD-6iM" firstAttribute="leading" secondItem="2vN-UH-khS" secondAttribute="leading" id="O2q-jh-ced"/>
-                <constraint firstItem="mdl-fM-Aof" firstAttribute="leading" secondItem="2vN-UH-khS" secondAttribute="leading" id="SrO-5c-iu2"/>
-                <constraint firstAttribute="trailing" secondItem="mdl-fM-Aof" secondAttribute="trailing" id="Zl8-oJ-JFQ"/>
+                <constraint firstAttribute="bottom" secondItem="Y7r-p7-11P" secondAttribute="bottom" id="da0-5j-ETf"/>
                 <constraint firstAttribute="trailing" secondItem="Y7r-p7-11P" secondAttribute="trailing" id="dcI-UV-Sul"/>
-                <constraint firstItem="Ypn-K7-f8Y" firstAttribute="top" secondItem="mdl-fM-Aof" secondAttribute="bottom" id="fIG-C4-Edo"/>
-                <constraint firstItem="lbX-eD-6iM" firstAttribute="top" secondItem="Y7r-p7-11P" secondAttribute="bottom" id="kJ4-0v-qrj"/>
-                <constraint firstAttribute="trailing" secondItem="lbX-eD-6iM" secondAttribute="trailing" id="oqk-TB-sCW"/>
-                <constraint firstAttribute="bottom" secondItem="Ypn-K7-f8Y" secondAttribute="bottom" id="uMt-wZ-FJ7"/>
                 <constraint firstItem="Y7r-p7-11P" firstAttribute="leading" secondItem="2vN-UH-khS" secondAttribute="leading" id="x7w-ku-z5r"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="moreButton1" destination="DNz-qt-uDi" id="70e-Md-KHz"/>
-                <outlet property="moreButton2" destination="Q7h-Jy-GcN" id="J55-0A-0k6"/>
-                <outlet property="moreButton3" destination="sOK-Zw-TFn" id="gf4-KN-KDv"/>
-                <outlet property="moreButton4" destination="sYa-d7-LDW" id="eG0-oM-I1R"/>
                 <outlet property="moreLabel1" destination="JBX-Ns-79h" id="gqh-9F-AAB"/>
-                <outlet property="moreLabel2" destination="YFS-hg-6UT" id="vqG-DE-hcC"/>
-                <outlet property="moreLabel3" destination="0fp-wL-TGx" id="oMf-p0-ghj"/>
-                <outlet property="moreLabel4" destination="U1o-ci-Oga" id="16m-TZ-UEU"/>
             </connections>
-            <point key="canvasLocation" x="99" y="-602.5"/>
+            <point key="canvasLocation" x="-26" y="-739.5"/>
         </view>
     </objects>
     <resources>
