--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/ViewController/YQCheckAchievementDetailVC.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/ViewController/YQCheckAchievementDetailVC.xib
@@ -116,11 +116,19 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正确答案" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Awf-ig-ax7">
+                            <rect key="frame" x="72.5" y="44.5" width="61.5" height="18"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="FUB-tR-Nv7" firstAttribute="top" secondItem="gbR-kj-i01" secondAttribute="bottom" constant="15" id="1xS-3r-CNE"/>
                         <constraint firstItem="FUB-tR-Nv7" firstAttribute="leading" secondItem="Kvb-fs-2On" secondAttribute="leading" constant="30" id="Ifk-TT-Ubo"/>
+                        <constraint firstItem="Awf-ig-ax7" firstAttribute="centerY" secondItem="eYz-Ak-EXz" secondAttribute="centerY" id="J9e-rK-OZK"/>
+                        <constraint firstItem="Awf-ig-ax7" firstAttribute="leading" secondItem="eYz-Ak-EXz" secondAttribute="trailing" constant="5" id="Pk7-Wx-6Cd"/>
                         <constraint firstItem="gbR-kj-i01" firstAttribute="top" secondItem="Kvb-fs-2On" secondAttribute="top" id="Rsc-9A-Nwf"/>
                         <constraint firstItem="eYz-Ak-EXz" firstAttribute="leading" secondItem="Kvb-fs-2On" secondAttribute="leading" constant="30" id="g2j-T0-jVE"/>
                         <constraint firstItem="gbR-kj-i01" firstAttribute="leading" secondItem="Kvb-fs-2On" secondAttribute="leading" constant="10" id="m3m-Ik-zsV"/>
