知识库的接口代码实现,列表查询,培训详情接口实现;

--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQStudyDetailCell.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQStudyDetailCell.xib
@@ -64,6 +64,9 @@
                     <constraint firstItem="sqV-Cf-p4J" firstAttribute="leading" secondItem="nac-UP-wHn" secondAttribute="leading" id="eTl-oP-il7"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="titleButton" destination="lme-ab-jUD" id="lgs-yo-vBP"/>
+            </connections>
             <point key="canvasLocation" x="-231.5" y="-12"/>
         </tableViewCell>
     </objects>
